<resources>
    <string name="app_name">ProjectM7</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="crea_el_teu_usuari_aqu">Crea el teu usuari aquí</string>
    <string name="sign_up">Sign Up</string>
    <string name="formulari_de_registre">Formulari de registre</string>
    <string name="nom">Nom:</string>
    <string name="contrasenya">Contrasenya:</string>
    <string name="username">Username:</string>
    <string name="cognom">Cognom:</string>
    <string name="registrar">Registrar</string>
    <string name="benvingut">Benvingut!!</string>
    <string name="usertext" translatable="false">usertext</string>
    <string name="crea_el_teu_usuari_aqui">Crea el teu usuari aqui</string>
    <string name="crea_el_teu_usuari">Crea el teu usuari</string>
    <string name="title_activity_principal">principal</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">User</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Mis eventos</string>
    <string name="menu_slideshow">Crear Evento</string>
    <string name="menu_share">Cerrar Sesion</string>
    <string name="menu_send">Mi Perfil</string>
    <string name="sexe">Sexe:</string>
    <string name="home">Home</string>
    <string name="dona">Dona</string>
    <string name="frase_que_mes_et_defineix">Frase que mes et defineix:</string>
    <string name="ets_introvertit">Ets introvertit?</string>
    <string name="et_consideres_divertit">Et consideres divertit?</string>
    <string name="accepto_l_us_de_les_meves_dades">Accepto l\'us de les meves dades</string>
    <string name="title_placeholder">Esports</string>
    <string name="news_placeholder">Actividad</string>
    <string name="sports_info_placeholder" translatable="false">sports</string>
    <string name="language_english">language english</string>
    <string name="language_spanish">language spanish</string>
    <string name="language_catalan">language catalan</string>
    <string name="correu_electronic">Correu electronic</string>

    <array name="sports_images">
        <item>@drawable/futbol</item>
        <item>@drawable/bolos</item>
        <item>@drawable/fiesta</item>
        <item>@drawable/feria</item>
        <item>@drawable/cine</item>
        <item>@drawable/basquet</item>
        <item>@drawable/compras</item>
    </array>

    <string-array name="sports_info">
        <item>Futbol</item>
        <item>Bolos</item>
        <item>Fiesta</item>
        <item>Feria</item>
        <item>Cine</item>
        <item>Basquet</item>
        <item>Compras</item>
    </string-array>



</resources>
