<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/titol"
        android:text="@string/formulari_de_registre"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tv_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/tv_nom"
        android:text="@string/nom"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/txt_nom" />

    <TextView
        android:id="@+id/tv_cognom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/tv_cognom"
        android:text="@string/cognom"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_cognom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/txt_cognom"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/tv_username"
        android:text="@string/username"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/txt_username"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_contrasenya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/tv_contrasenya"
        android:text="@string/contrasenya"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_contrasenya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:labelFor="@id/txt_contrasenya"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_sexe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sexe:"
        android:textSize="24sp" />

    <RadioButton
        android:id="@+id/rb_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Home" />

    <RadioButton
        android:id="@+id/rb_dona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Dona" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Frase  que mes et defineix:"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/sp_frase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_introvertit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ets introvertit?"
        android:textSize="24sp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Et consideres divertit?"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Accepto l'us de les meves dades" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar" />

</LinearLayout>