<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="20dp"
    style="@style/Widget.Shrine.TextInputLayout"
    >


    <!--Canviem el LinearLayout a RelativeLayout, i eliminem el atribut "orientation"-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sportsImage"
            android:adjustViewBounds="true"
            >
        </ImageView>

        <TextView
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/sportsImage"
            android:id="@+id/title"
            android:text="@string/title_placeholder"
            android:padding="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newsTitle"
            android:layout_below="@id/sportsImage"
            android:textColor="?android:textColorSecondary"
            android:text="@string/news_placeholder"
            android:padding="8dp"
            style="@style/Widget.Shrine.TextInputLayout"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/newsTitle"
            android:id="@+id/subTitle"
            android:text="@string/sports_info_placeholder"
            android:padding="8dp"
            style="@style/Widget.Shrine.TextInputLayout"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>